// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoldenButton renders correctly when disabled: GoldenButton disabled 1`] = `
<body>
  <div>
    <button
      class="golden-button "
      disabled=""
    >
      <div
        class="rpgui-container container framed framed-golden-2 golden-container"
      >
        <span>
          Test
        </span>
      </div>
    </button>
  </div>
</body>
`;

exports[`GoldenButton renders correctly: GoldenButton 1`] = `
<body>
  <div>
    <button
      class="golden-button mock-class"
    >
      <div
        class="rpgui-container container framed framed-golden-2 golden-container"
      >
        <span>
          Test
        </span>
      </div>
    </button>
  </div>
</body>
`;
